<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_backup_file"
        android:title="@string/file_backup"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_import_file"
        android:title="@string/file_import"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_backup_description"
        android:title="@string/backup_description"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>